; ModuleID = '/home/carl/AnghaBench/FFmpeg/fftools/extr_ffmpeg_filter.c_get_compliance_unofficial_pix_fmts.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/fftools/extr_ffmpeg_filter.c_get_compliance_unofficial_pix_fmts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@get_compliance_unofficial_pix_fmts.mjpeg_formats = internal constant [7 x i32] [i32 130, i32 129, i32 128, i32 133, i32 132, i32 131, i32 134], align 16
@get_compliance_unofficial_pix_fmts.ljpeg_formats = internal constant [10 x i32] [i32 136, i32 135, i32 137, i32 130, i32 128, i32 129, i32 133, i32 131, i32 132, i32 134], align 16
@AV_CODEC_ID_MJPEG = common dso_local global i32 0, align 4
@AV_CODEC_ID_LJPEG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32, i32*)* @get_compliance_unofficial_pix_fmts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_compliance_unofficial_pix_fmts(i32 %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @AV_CODEC_ID_MJPEG, align 4
  %8 = icmp eq i32 %6, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i32* getelementptr inbounds ([7 x i32], [7 x i32]* @get_compliance_unofficial_pix_fmts.mjpeg_formats, i64 0, i64 0), i32** %3, align 8
  br label %17

10:                                               ; preds = %2
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @AV_CODEC_ID_LJPEG, align 4
  %13 = icmp eq i32 %11, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %10
  store i32* getelementptr inbounds ([10 x i32], [10 x i32]* @get_compliance_unofficial_pix_fmts.ljpeg_formats, i64 0, i64 0), i32** %3, align 8
  br label %17

15:                                               ; preds = %10
  %16 = load i32*, i32** %5, align 8
  store i32* %16, i32** %3, align 8
  br label %17

17:                                               ; preds = %15, %14, %9
  %18 = load i32*, i32** %3, align 8
  ret i32* %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
